<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>dev.getelements.elements</groupId>
    <artifactId>eci-elements</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <scm>
        <url>ssh://git@bitbucket.namazustudios.net:7999/soc/socialengine-java-server.git</url>
        <connection>scm:git:ssh://git@bitbucket.namazustudios.net:7999/soc/socialengine-java-server.git</connection>
        <developerConnection>scm:git:ssh://git@bitbucket.namazustudios.net:7999/soc/socialengine-java-server.git
        </developerConnection>
    </scm>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <modules>
        <module>common</module>
        <module>common-util</module>
        <module>common-servlet</module>
        <module>common-rt</module>
        <module>rest-api</module>
        <module>service</module>
        <module>service-redis</module>
        <module>service-guice</module>
        <module>mongo-dao</module>
        <module>dao</module>
        <module>setup</module>
        <module>rest-jetty</module>
        <module>guice</module>
        <module>rest-guice</module>
        <module>search-tools</module>
        <module>index-storage</module>
        <module>rt-common</module>
        <module>rt-jeromq</module>
        <module>rt-jeromq-guice</module>
        <module>rt-server</module>
        <module>rt-server-git</module>
        <module>rt-server-git-guice</module>
        <module>rt-server-simple</module>
        <module>rt-server-simple-guice</module>
        <module>rt-server-xodus</module>
        <module>rt-server-xodus-guice</module>
        <module>rt-server-cluster</module>
        <module>rt-server-cluster-guice</module>
        <module>rt-server-cluster-jeromq</module>
        <module>rt-server-cluster-jeromq-guice</module>
        <module>rt-server-cluster-node</module>
        <module>rt-server-cluster-node-jeromq</module>
        <module>rt-server-cluster-node-jeromq-guice</module>
        <module>rt-server-transact</module>
        <module>rt-server-transact-unixfs</module>
        <module>rt-server-transact-unixfs-guice</module>
        <module>rt-server-transact-guice</module>
        <module>rt-server-cluster-node-guice</module>
        <module>rt-server-lua</module>
        <module>rt-server-lua-guice</module>
        <module>rt-server-lua-stress-tests</module>
        <module>rt-client</module>
        <module>rt-http-servlet</module>
        <module>rt-fst</module>
        <module>rt-fst-guice</module>
        <module>rt-jackson</module>
        <module>rt-jackson-guice</module>
        <module>rt-server-guice</module>
        <module>rt-jersey-guice</module>
        <module>rt-server-lua-testkit</module>
        <module>docker</module>
        <module>code-serve</module>
        <module>code-serve-guice</module>
        <module>code-serve-jetty</module>
        <module>common-jetty</module>
        <module>cdn-serve</module>
        <module>cdn-serve-api</module>
        <module>cdn-serve-jetty</module>
        <module>app-serve-jetty</module>
        <module>app-serve-testkit</module>
        <module>app-node</module>
        <module>socialengine-jnlua/jnlua</module>
        <module>common-lua</module>
        <module>web-ui-angular</module>
        <module>rest-api-test</module>
        <module>rt-server-testkit</module>
        <module>service-test</module>
        <module>doc-serve</module>
        <module>doclet</module>
        <module>mongo-test</module>
        <module>formidium-jetty</module>
        <module>common-servlet-guice</module>
        <module>rpc-api</module>
        <module>rpc-api-guice</module>
        <module>rpc-api-jetty</module>
        <module>rpc-api-ethereum</module>
        <module>mongo-guice</module>
        <module>monolith</module>
    </modules>

    <properties>
        <test.suites>**/*UnitTestSuite.java</test.suites>
        <guice.version>4.2.3</guice.version>
        <guice.bridge.version>2.5.0-b32</guice.bridge.version>
        <javax.inject.version>1</javax.inject.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
        <javax.xml.bind.version>2.3.1</javax.xml.bind.version>
        <slf4j.version>1.7.32</slf4j.version>
        <logback.version>1.2.3</logback.version>
        <guava.version>21.0</guava.version>
        <commons.lang.version>3.3.2</commons.lang.version>
        <jaxrs.api.version>2.1</jaxrs.api.version>
        <jersey.version>2.32</jersey.version>
        <javax.validation.version>2.0.1.Final</javax.validation.version>
        <lucene.version>7.2.0</lucene.version>
        <testng.version>6.13.1</testng.version>
        <test.groups>unit</test.groups>
        <surefire.version>3.0.0-M5</surefire.version>
        <jackson.version>2.12.0</jackson.version>
        <bson4jackson.version>2.4.0</bson4jackson.version>
        <reflections.version>0.9.12</reflections.version>
        <swagger.version>1.6.2</swagger.version>
        <rocoto.version>6.2</rocoto.version>
        <dozer.version>6.0.0</dozer.version>
        <hibernate.validator.version>6.1.0.Final</hibernate.validator.version>
        <hibernate.validator.guice.version>2.0.0</hibernate.validator.guice.version>
        <javax.el.version>3.0.1-b12</javax.el.version>
        <commons.logging.version>1.2</commons.logging.version>
        <restfb.version>3.0.0-RC.2</restfb.version>
        <jgit.version>4.8.0.201706111038-r</jgit.version>
        <mockito.version>3.5.13</mockito.version>
        <jopt.version>4.9-beta-1</jopt.version>
        <jeromq.version>0.5.2</jeromq.version>
        <javolution.version>6.0.0</javolution.version>
        <firebase.admin.version>9.1.1</firebase.admin.version>
        <netty.version>4.1.22.Final</netty.version>
        <xodus.version>1.3.232</xodus.version>
        <jetty.version>10.0.4</jetty.version>
        <flapdoodle.mongo.version>3.0.0</flapdoodle.mongo.version>
        <embedded.redis.version>0.6</embedded.redis.version>
        <auth0.java.jwt.version>3.10.3</auth0.java.jwt.version>
        <spotify.dns.version>3.2.2</spotify.dns.version>
        <annotations.version>2.11.3</annotations.version>
        <neow3j.version>3.14.0</neow3j.version>
        <web3j.version>4.9.4</web3j.version>
        <solanaj.version>0.0.7</solanaj.version>
        <morphia.version>2.1.4</morphia.version>
        <mongo.java.driver.version>4.0.5</mongo.java.driver.version>
        <flow.sdk.version>0.4.0</flow.sdk.version>
        <kotlin.version>1.5.10</kotlin.version>
        <redisson.version>3.14.1</redisson.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>dev.getelements.elements</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.getelements.elements</groupId>
                <artifactId>service-guice</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.getelements.elements</groupId>
                <artifactId>dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.getelements.elements</groupId>
                <artifactId>mongo-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.getelements.elements</groupId>
                <artifactId>mongo-guice</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-http</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-deploy</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-proxy</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sf.jopt-simple</groupId>
                <artifactId>jopt-simple</artifactId>
                <version>${jopt.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>${javax.inject.version}</version>
            </dependency>

            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-jersey2-jaxrs</artifactId>
                <version>${swagger.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.fasterxml.jackson.core</groupId>
                        <artifactId>jackson-databind</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.fasterxml.jackson.dataformat</groupId>
                        <artifactId>jackson-dataformat-yaml</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.glassfish.jersey.media</groupId>
                <artifactId>jersey-media-json-jackson</artifactId>
                <version>${jersey.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.fasterxml.jackson.core</groupId>
                        <artifactId>jackson-annotations</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.fasterxml.jackson.module</groupId>
                        <artifactId>jackson-module-jaxb-annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.jetbrains.xodus</groupId>
                <artifactId>xodus-openAPI</artifactId>
                <version>${xodus.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-stdlib</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.fasterxml.jackson.dataformat</groupId>
                        <artifactId>jackson-dataformat-yaml</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <inherited>true</inherited>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.4</version>
                    <executions>
                        <execution>
                            <phase>generate-resources</phase>
                            <goals>
                                <goal>create-metadata</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <doCheck>false</doCheck>
                        <doUpdate>false</doUpdate>
                        <timestampFormat>yyyy-MM-dd HH:mm:ss</timestampFormat>
                        <addOutputDirectoryToResources>true</addOutputDirectoryToResources>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <executions>
                        <execution>
                            <id>enforce-maven</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireMavenVersion>
                                        <version>3.1.0</version>
                                    </requireMavenVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
